TestRepo2/src/objects/Ingredient__c.object
<CustomObject>
    <fields>
        <fullName>Available__c</fullName>
        <label>Available</label>
        <picklist>
            <picklistValues>
                <fullName>FALSE</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>TRUE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <formula>IF( Recipe_Diageo_Product__c &lt;&gt;&quot;&quot; , Recipe_Diageo_Product__r.Image__c, &quot;No Image&quot;)</formula>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <externalId>true</externalId>
        <label>LegacyID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipe_Diageo_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipe Diageo Product</label>
        <referenceTo>Diageo_Product__c</referenceTo>
        <relationshipLabel>Ingredients</relationshipLabel>
        <relationshipName>Ingredients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recipe_Non_Diageo_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipe Non-Diageo Product</label>
        <referenceTo>Recipe_Non_Diageo_Product__c</referenceTo>
        <relationshipLabel>Ingredients</relationshipLabel>
        <relationshipName>Ingredients</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Ingredient</label>
    <nameField>
        <label>Ingredient Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ingredients</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>